<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".Controllers.FragmentControllers.mygroup.ListFragment">


    <LinearLayout
        android:id="@+id/req_list_fragment_LL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/req_list_top_RL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="25dp"
                        android:fontFamily="@font/avenir"
                        android:text="@string/requirement_list"
                        android:textColor="@color/darkGreen"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/req_list_center_RL"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toBottomOf="@+id/req_list_top_RL">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/req_list_recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:listitem="@layout/item_req_list" />

                    <RelativeLayout
                        android:id="@+id/plus_button_RL"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="30dp"
                        android:gravity="bottom|end">

                        <Button
                            android:id="@+id/add_new_req_button"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginBottom="15dp"
                            android:background="@drawable/ic_plus_button" />

                    </RelativeLayout>


                </RelativeLayout>


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</FrameLayout>