...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shopping_cart_background"
                android:src="@drawable/ic_receipt" />

            <EditText
                android:id="@+id/add_req_descETv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/avenir"
                android:hint="@string/requierement_desc" />

...
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/back"
                android:textColor="@color/button_gray" />

            <Button
                android:id="@+id/dialog_list_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/save"
                android:textColor="@color/button_green" />

...
