...
                    
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/list_bttnLL"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_marginHorizontal="30dp">

                            <ImageButton
                                android:id="@+id/task_listButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/group_top_button"
                                android:src="@drawable/ic_task_list" />

                            <TextView
...
