...
            app:layout_constraintTop_toTopOf="parent"
            app:titleMarginStart="100dp"
            app:titleTextColor="@color/white" />


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_navi_back"
            android:backgroundTint="@color/common_google_signin_btn_text_dark_disabled"
            app:itemIconTint="@drawable/nav_item_background"
            app:labelVisibilityMode="unlabeled"
...
